added editing property

--- a/app/pages/properties/editproperty/editproperty.component.html
+++ b/app/pages/properties/editproperty/editproperty.component.html
@@ -65,23 +65,22 @@
                         <propertymarketing-cmp #propertyMargeting></propertymarketing-cmp>
                     </div>
 
-                    <div class="card-content" id="metatab-property-4">
+                    <div class="card-content" id="metatab-property-4" *ngIf="mainService.metadata[3]">
                         <property-metafilter-cmp [metadata]="mainService.metadata[3]" #pointsOfInterest></property-metafilter-cmp>
                     </div>
 
-                    <div class="card-content" id="metatab-property-3">
+                    <div class="card-content" id="metatab-property-3" *ngIf="mainService.metadata[2]">
                         <property-metafilter-cmp [metadata]="mainService.metadata[2]" #localActivities></property-metafilter-cmp>
                     </div>
-
-                    <div class="card-content" id="metatab-property-6">
+                    <div class="card-content" id="metatab-property-6" *ngIf="mainService.metadata[5]">
                         <property-metafilter-cmp [metadata]="mainService.metadata[5]" #features></property-metafilter-cmp>
                     </div>
 
-                    <div class="card-content" id="metatab-property-2">
+                    <div class="card-content" id="metatab-property-2" *ngIf="mainService.metadata[1]">
                         <property-metafilter-cmp [metadata]="mainService.metadata[1]" #services></property-metafilter-cmp>
                     </div>
 
-                    <div class="card-content" id="metatab-property-1">
+                    <div class="card-content" id="metatab-property-1" *ngIf="mainService.metadata[0]">
                         <property-metafilter-cmp [metadata]="mainService.metadata[0]" #trip></property-metafilter-cmp>
                     </div>
                 </div>
