--- a/app/pages/properties/metafiltercomponents/metafilter.component.html
+++ b/app/pages/properties/metafiltercomponents/metafilter.component.html
@@ -16,6 +16,7 @@
                         <i class="material-icons">{{ metafilters[option.Id] ? 'check' : 'close' }}</i>
                     </span>
                     {{option.Name}}
+                    <input type="text" [value]="option.Name">
                 </button>
             </div>
         </div>
