--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -9,29 +9,31 @@
             </a>
         </div>
         <div id="name_address" class="panel-collapse collapse panel-content" role="tabpanel" attr.aria-labelledby="heading-name_address">
-            <div class="panel-body">
+            <div class="panel-body" [formGroup]="propertyForm">
+                <!--
                 <div>
                     <div ng2-auto-complete id="ownerName" [max-num-list]="10" [source]="ownerNames" (valueChanged)="ownerChanged($event)" [ngModel]="ownerName" class="form-group label-floating">
                         <label class="control-label">Select Owner</label>
                         <input class="form-control" id="owner-name">
                     </div>
                 </div>
+                -->
                 <div class="form-group label-floating col-lg-6 col-md-6 col-sm-12 listing-name">
                     <label class="control-label">Listing Name</label>
-                    <input type="text" class="form-control" (blur)="listingNameChanged($event)">
-                </div>                                                    
+                    <input type="text" class="form-control" formControlName="InternalName">
+                </div>
                 <div class="form-group has-error label-floating listing-name col-lg-6 col-md-6 col-sm-12 official-name">
                     <label class="control-label">Official Name *</label>
-                    <input type="text" class="form-control" (blur)="officialNameChanged($event)" required>
-                </div>                                                   
+                    <input type="text" class="form-control" formControlName="Name">
+                </div>
                 <div class="form-group label-floating">
                     <label class="control-label">Address</label>
-                    <input type="text" class="form-control" (blur)="addressChanged($event)">
+                    <input type="text" class="form-control" formControlName="Address">
                 </div>
                 <div>
                     <div ng2-auto-complete id="regionName" [max-num-list]="10" [source]="regions" (valueChanged)="regionChanged($event)" class="form-group label-floating has-error">
                         <label class="control-label">Select Region *</label>
-                        <input class="form-control" required>
+                        <input class="form-control" formControlName="RegionName" required>
                     </div>
                 </div>
             </div>
@@ -51,30 +53,30 @@
             </a>
         </div>
         <div id="description" class="panel-collapse collapse panel-content" role="tabpanel" attr.aria-labelledby="heading-description">
-            <div class="panel-body">                                        
+            <div class="panel-body" [formGroup]="propertyForm">
                 <div class="form-group label-floating">
                     <label class="control-label">Headline</label>
-                    <input type="text" class="form-control" (blur)="headlineChanged($event)">
+                    <input type="text" class="form-control" formControlName="Headline">
                 </div>  
                 <div class="form-group label-floating">
                     <label class="control-label">Summary</label>
-                    <textarea class="form-control" (blur)="summaryChanged($event)"></textarea>
+                    <textarea class="form-control" formControlName="Summary"></textarea>
                 </div>  
                 <div class="form-group label-floating">
                     <label class="control-label">Description</label>
-                    <textarea class="form-control" (blur)="descriptionChanged($event)"></textarea>
+                    <textarea class="form-control" formControlName="Description"></textarea>
                 </div>  
                 <div class="form-group label-floating">
                     <label class="control-label">Other Important Information</label>
-                    <textarea class="form-control" (blur)="otherInfoChanged($event)"></textarea>
+                    <textarea class="form-control" formControlName="OtherInfo"></textarea>
                 </div>                                      
                 <div class="form-group label-floating col-lg-6 col-md-6 col-sm-12 collaborator-initial">
                     <label class="control-label">Collaborator Initials</label>
-                    <input type="text" class="form-control" (blur)="collaboratorInitialChanged($event)">
+                    <input type="text" class="form-control" formControlName="CollaboratorInitials">
                 </div>                                      
                 <div class="form-group label-floating listing-name col-lg-6 col-md-6 col-sm-12 box-url">
                     <label class="control-label">Box Url</label>
-                    <input type="text" class="form-control" (blur)="boxUrlChanged($event)">
+                    <input type="text" class="form-control" formControlName="BoxUrl">
                 </div>
                 <div *ngIf="mainService.metadata[4]">
                     <property-metafilter-cmp [metadata]="mainService.metadata[4]" #villadescription></property-metafilter-cmp>
