--- a/app/pages/properties/addproperty/addproperty.component.html
+++ b/app/pages/properties/addproperty/addproperty.component.html
@@ -3,7 +3,6 @@
         <div class="row">
             <div class="col-md-3 p-b-15 metafilter-names">
                 <ul class="nav nav-pills nav-pills-icons nav-pills-grey nav-stacked" role="tablist">
-                    <!--
                     <li class="active">
                         <a href="#metatab-info" role="tab" data-toggle="tab" class="secondary-color metatab-info-tab-name">
                             Property Info
@@ -49,16 +48,15 @@
                             Trip
                         </a>
                     </li>
-                    -->
                 </ul>
             </div>
-            <div class="col-md-9 subtype-filters-names">
+            <div [formGroup]="propertyForm" class="col-md-9 subtype-filters-names">
                 <div class="tab-content card col-sm-12 col-md-12 col-lg-12">
                 <!--  Property Info  -->
-                    <!--
-                    <div id="metatab-info" class="active card-content">
-                        <propertyinfo-cmp #propertyInfo></propertyinfo-cmp>
+                    <div id="metatab-info" class="active card-content" *ngIf="isLoad">
+                        <propertyinfo-cmp [group]="propertyForm" #propertyInfo></propertyinfo-cmp>
                     </div>
+                    <!--
                     <div id="metatab-images" class="card-content">
                         <propertyimage-cmp #propertyImage></propertyimage-cmp>
                     </div>
