--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -24,7 +24,7 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 }
 
 .primary-color {
-	background-color: #0b5a7c !important;
+	background-color: #1565c0 !important;
 	color: white !important;
 }
 
