--- a/app/components/sidebar/sidebar.component.html
+++ b/app/components/sidebar/sidebar.component.html
@@ -1,85 +1,55 @@
+<div class="logo no-divider">
+    <div class="logo-normal">
+        <a href="" class="simple-text">
+            Privadia Exchange
+        </a>
+    </div>
+</div>
 
+<div class="sidebar-wrapper">
 
-        <div class="logo">
-            <div class="logo-normal">
-                <a href="" class="simple-text">
-                    Privadia Exchange
-                </a>
-            </div>
+    <div class="user">
+        <div class="photo">
+            <img src="../assets/img/faces/avatar.jpg"/>
         </div>
-
-
-        <div class="sidebar-wrapper">
-
-            <div class="user">
-                <div class="photo">
-                    <img src="../assets/img/faces/avatar.jpg" />
-                </div>
-                <div class="info">
-                    <a data-toggle="collapse" href="#collapseExample" class="collapsed">
-                        <span>
-                            Tania Andrew
-                            <b class="caret"></b>
-                        </span>
-                    </a>
-                    <div class="collapse" id="collapseExample">
-                        <ul class="nav">
-                            <li>
-                                <a href="javascript:void(0)">
-                                    <span class="sidebar-mini">MP</span>
-                                    <span class="sidebar-normal">My Profile</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)">
-                                    <span class="sidebar-mini">EP</span>
-                                    <span class="sidebar-normal">Edit Profile</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)">
-                                    <span class="sidebar-mini">S</span>
-                                    <span class="sidebar-normal">Settings</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="nav-container">
+        <div class="info">
+            <a data-toggle="collapse" href="#collapseExample" class="collapsed">
+                <span>Tania Andrew<b class="caret"></b></span>
+            </a>
+            <div class="collapse" id="collapseExample">
                 <ul class="nav">
-                    <li routerLinkActive="active">
-                        <a  [routerLink]="[menuItems[0].path]" (click)="menuClick()">
-                            <i class="{{menuItems[0].icon}}">dashboard</i>
-                            <p>{{menuItems[0].title}}</p>
-                        </a>
-                        <mainfilter-cmp></mainfilter-cmp>
-                    </li>
-                    <li routerLinkActive="active">
-                        <a  [routerLink]="[menuItems[1].path]" (click)="menuClick()">
-                            <i class="{{menuItems[1].icon}}">dashboard</i>
-                            <p>{{menuItems[1].title}}</p>
+                    <li>
+                        <a href="javascript:void(0)">
+                            <span class="sidebar-mini visible-on-sidebar-mini">MP</span>
+                            <span class="sidebar-normal">My Profile</span>
                         </a>
                     </li>
-                    <li routerLinkActive="active">
-                        <a  [routerLink]="[menuItems[2].path]" (click)="menuClick()">
-                            <i class="{{menuItems[2].icon}}">dashboard</i>
-                            <p>{{menuItems[2].title}}</p>
+                    <li>
+                        <a href="javascript:void(0)">
+                            <span class="sidebar-mini visible-on-sidebar-mini">EP</span>
+                            <span class="sidebar-normal">Edit Profile</span>
                         </a>
                     </li>
-                    <li routerLinkActive="active">
-                        <a  [routerLink]="[menuItems[3].path]" (click)="menuClick()">
-                            <i class="{{menuItems[3].icon}}">dashboard</i>
-                            <p>{{menuItems[3].title}}</p>
-                        </a>
-                    </li>
-                    <li routerLinkActive="active">
-                        <a  [routerLink]="[menuItems[4].path]" (click)="menuClick()">
-                            <i class="{{menuItems[4].icon}}">dashboard</i>
-                            <p>{{menuItems[4].title}}</p>
+                    <li>
+                        <a href="javascript:void(0)">
+                            <span class="sidebar-mini visible-on-sidebar-mini">S</span>
+                            <span class="sidebar-normal">Settings</span>
                         </a>
                     </li>
                 </ul>
             </div>
-
         </div>
+    </div>
+    <div class="nav-container">
+        <ul class="nav">
+            <li routerLinkActive="active" *ngFor="let item of menuItems">
+                <a [routerLink]="[item.path]" (click)="menuClick()">
+                    <i class="{{item.icon}}">{{item.iconName}}</i>
+                    <p>{{item.title}}</p>
+                </a>
+                <mainfilter-cmp *ngIf="item.iconName == 'dashboard1'"></mainfilter-cmp>
+            </li>
+        </ul>
+    </div>
+
+</div>
