--- a/app/components/shared/navbar/navbar.component.html
+++ b/app/components/shared/navbar/navbar.component.html
@@ -1,11 +1,13 @@
 <nav class="navbar navbar-transparent navbar-absolute">
     <div class="container-fluid">
-        <div class="navbar-minimize">
+        <!--
+        <div class="navbar-minimize" *ngIf="false">
             <button id="minimizeSidebar" class="btn btn-round btn-white btn-fill btn-just-icon">
                 <i class="material-icons visible-on-sidebar-regular">more_vert</i>
                 <i class="material-icons visible-on-sidebar-mini">view_list</i>
             </button>
         </div>
+        -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -13,10 +15,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{getPath()}}"> {{getTitle()}} </a>
+            <a class="navbar-brand navbar-left" href="{{getPath()}}"> {{getTitle()}} </a>
+            <div class="toolbar navbar-left">
+                <!-- Here you can write extra buttons/actions for the toolbar              -->
+                <button class="btn btn-simple btn-warning btn-icon pull-right secondary-color shadow-yellow" [routerLink]="['/properties/addproperty']">
+                    <i class="material-icons">add</i> Add
+                </button>
+            </div>
         </div>
         <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
+            <!--
+            <ul class="nav navbar-nav navbar-right" *ngIf="false">
                 <li>
                     <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="material-icons">dashboard</i>
@@ -58,12 +67,13 @@
                 </li>
                 <li class="separator hidden-lg hidden-md"></li>
             </ul>
+            -->
             <form class="navbar-form navbar-right" role="search">
                 <div class="form-group form-search is-empty">
                     <input type="text" class="form-control" placeholder="Search">
                     <span class="material-input"></span>
                 </div>
-                <button type="submit" class="btn btn-white btn-round btn-just-icon">
+                <button type="submit" class="btn btn-non-color btn-round btn-just-icon">
                     <i class="material-icons">search</i>
                     <div class="ripple-container"></div>
                 </button>
