--- a/app/pages/properties/addproperty/addproperty.component.html
+++ b/app/pages/properties/addproperty/addproperty.component.html
@@ -60,10 +60,11 @@
                     <div id="metatab-images" class="card-content">
                         <propertyimage-cmp [group]="propertyForm"></propertyimage-cmp>
                     </div>
-                    <!--
+                    <!--  Property Marketing  -->
                     <div id="metatab-marketing" class="card-content">
-                        <propertymarketing-cmp #propertyMargeting></propertymarketing-cmp>
+                        <propertymarketing-cmp [group]="propertyForm"></propertymarketing-cmp>
                     </div>
+                    <!--
 
                     <div class="card-content" id="metatab-property-4">
                         <property-metafilter-cmp [metadata]="mainService.metadata[3]" #pointsOfInterest></property-metafilter-cmp>
