--- a/app/pages/properties/marketing/propertymarketing.component.html
+++ b/app/pages/properties/marketing/propertymarketing.component.html
@@ -1,10 +1,10 @@
-<div>
+<div [formGroup]="propertyForm">
 	<div class="form-group label-floating marketing-url">
         <label class="control-label">Unbranded PDF Url</label>
-        <input type="text" class="form-control" (blur)="pdfUrlChanged($event)" #pdfUrl>
+        <input type="text" class="form-control" formControlName="BoxUrl" (blur)="pdfUrlChanged($event)" #pdfUrl>
     </div> 
 	<div class="form-group label-floating marketing-url">
         <label class="control-label">Agency Pack Download Url</label>
-        <input type="text" class="form-control" (blur)="agnecyPackUrl($event)" #agencyUrl>
+        <input type="text" class="form-control" formControlName="AgencyPackUrl" (blur)="agnecyPackUrl($event)" #agencyUrl>
     </div>   
 </div>
