--- a/app/pages/properties/metafiltercomponents/metafilter.component.html
+++ b/app/pages/properties/metafiltercomponents/metafilter.component.html
@@ -1,4 +1,4 @@
-<metafilter-heading-cmp [name]="metadata.Name" #metafilterHeading></metafilter-heading-cmp>
+<metafilter-heading-cmp [name]="metadata.Name" [group]="propertyForm"></metafilter-heading-cmp>
 <div class="panel-group" role="tablist" aria-multiselectable="true">
     <div class="panel panel-default" *ngFor="let subtype of metadata.MetaDataSubTypes">
         <div class="panel-heading" role="tab" id="heading-{{subtype.Id}}">
