--- a/app/pages/properties/metafilterheading/metafilterheading.component.html
+++ b/app/pages/properties/metafilterheading/metafilterheading.component.html
@@ -22,7 +22,7 @@
     </div>
 </div>
 
-<div *ngIf="name == 'Points of Interest'" class="points-of-interest">
+<div *ngIf="name == 'Points of Interest'" [formGroup]="propertyForm" class="points-of-interest">
     <table>
         <thead>
             <tr>
@@ -34,10 +34,18 @@
         </thead>
         <tbody>
             <tr *ngFor="let item of PoITypes; let index = index" class="">
-                <td class="text-center checkbox"> <label> <input type="checkbox" checked="{{ item.checked ? 'checked': '' }}" [attr.type-id]="index" class="checkbox" (click)="checkboxClick($event)"/> </label> </td>
+                <td class="text-center checkbox">
+                    <label>
+                        <input type="checkbox" checked="{{ item.checked ? 'checked': '' }}" [attr.type-id]="index" class="checkbox" (click)="checkboxClick($event)"/>
+                    </label>
+                </td>
                 <td class="form-group text-center"> {{item.Name}} </td>
-                <td class="form-group text-left"> <input type="text" [attr.type-id]="index" class="name form-control" disabled="{{ item.checked ? '' : 'disabled' }}" (change)="nameChanged($event)" required /> </td>
-                <td class="form-group text-left"> <input type="number" min="0" [attr.type-id]="index" class="distance form-control" value="0" disabled="{{ item.checked ? '' : 'disabled' }}" (change)="distanceChanged($event)" required /> </td>
+                <td class="form-group text-left">
+                    <input type="text" [attr.type-id]="index" class="name form-control" disabled="{{ item.checked ? '' : 'disabled' }}" (change)="nameChanged($event)" required />
+                </td>
+                <td class="form-group text-left">
+                    <input type="number" min="0" [attr.type-id]="index" class="distance form-control" value="0" disabled="{{ item.checked ? '' : 'disabled' }}" (change)="distanceChanged($event)" required />
+                </td>
             </tr>
         </tbody>
     </table>
