refactoring add property

--- a/app/pages/properties/addproperty/addproperty.component.html
+++ b/app/pages/properties/addproperty/addproperty.component.html
@@ -64,11 +64,11 @@
                     <div id="metatab-marketing" class="card-content">
                         <propertymarketing-cmp [group]="propertyForm"></propertymarketing-cmp>
                     </div>
-                    <!--
 
                     <div class="card-content" id="metatab-property-4">
-                        <property-metafilter-cmp [metadata]="mainService.metadata[3]" #pointsOfInterest></property-metafilter-cmp>
+                        <property-metafilter-cmp [metadata]="mainService.metadata[3]" [group]="propertyForm"></property-metafilter-cmp>
                     </div>
+                    <!--
 
                     <div class="card-content" id="metatab-property-3">
                         <property-metafilter-cmp [metadata]="mainService.metadata[2]" #localActivities></property-metafilter-cmp>
