--- a/app/pages/properties/metafiltercomponents/metafilter.component.html
+++ b/app/pages/properties/metafiltercomponents/metafilter.component.html
@@ -1,25 +1,33 @@
 <metafilter-heading-cmp [name]="metadata.Name" [group]="propertyForm"></metafilter-heading-cmp>
-<div class="panel-group" role="tablist" aria-multiselectable="true">
-    <div class="panel panel-default" *ngFor="let subtype of metadata.MetaDataSubTypes">
-        <div class="panel-heading" role="tab" id="heading-{{subtype.Id}}">
-            <a role="button" data-toggle="collapse" [attr.data-parent]="'#metadata-'+metadata.Id" href="#{{subtype.Id}}" aria-expanded="true" [attr.aria-controls]="subtype.Id">
-                <h4 class="panel-title">
-                    {{subtype.Name}}
-                    <i class="material-icons">keyboard_arrow_down</i>
-                </h4>
-            </a>
-        </div>
-        <div id="{{subtype.Id}}" class="panel-collapse collapse in" role="tabpanel" [attr.aria-labelledby]="'heading-'+subtype.Id">
-            <div class="panel-body">
-                <button class="subtype-filter btn btn-sm {{ metafilters[option.Id] ? 'btn-success' : 'btn-default'}}" *ngFor="let option of subtype.MetaData" [attr.option-id]="option.Id" (click)="subfilterChange($event)">
-                    <span class="btn-label">
-                        <i class="material-icons">{{ metafilters[option.Id] ? 'check' : 'close' }}</i>
-                    </span>
-                    {{option.Name}}
+<div [formGroup]="propertyForm">
+    <div formArrayName="MetaDataTmp" class="panel-group" role="tablist" aria-multiselectable="true">
+        <div class="panel panel-default" *ngFor="let subtype of metadata.MetaDataSubTypes">
+            <div class="panel-heading" role="tab" id="heading-{{subtype.Id}}">
+                <a role="button" data-toggle="collapse" [attr.data-parent]="'#metadata-'+metadata.Id" href="#{{subtype.Id}}" aria-expanded="true" [attr.aria-controls]="subtype.Id">
+                    <h4 class="panel-title">
+                        {{subtype.Name}}
+                        <i class="material-icons">keyboard_arrow_down</i>
+                    </h4>
+                </a>
+            </div>
+            <div id="{{subtype.Id}}" class="panel-collapse collapse in" role="tabpanel" [attr.aria-labelledby]="'heading-'+subtype.Id">
+                <div class="panel-body">
                     <!--
-                    <input type="text" [value]="option.Name">
+                    <div *ngFor="let option of subtype.MetaData; let i = index">
                     -->
-                </button>
+                    <div *ngFor="let option of propertyForm.controls.MetaDataTmp.controls['type_' + subtype.Id].controls; let i = index">
+                        <button class="subtype-filter btn btn-sm {{ metafilters[option.controls.MetaDataId.value] ? 'btn-success' : 'btn-default'}}"
+                                [attr.option-id]="option.controls.MetaDataId.value"
+                                [attr.option-name]="option.controls.MetaDataName.value"
+                                [attr.option-subtype]="subtype.Id"
+                                [attr.option-index]="i" (click)="subfilterChange($event)">
+                            <span class="btn-label">
+                                <i class="material-icons">{{ metafilters[option.controls.MetaDataId.value] ? 'check' : 'close' }}</i>
+                            </span>
+                            {{option.controls.MetaDataName.value}}
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
