--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -89,7 +89,7 @@
                     <input type="text" class="form-control" formControlName="BoxUrl">
                 </div>
                 <div *ngIf="mainService.metadata[4]">
-                    <property-metafilter-cmp [metadata]="mainService.metadata[4]" #villadescription></property-metafilter-cmp>
+                    <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[4]" #villadescription></property-metafilter-cmp>
                 </div>
             </div>
         </div>
