--- a/app/pages/properties/addproperty/addproperty.component.html
+++ b/app/pages/properties/addproperty/addproperty.component.html
@@ -66,26 +66,24 @@
                     </div>
 
                     <div class="card-content" id="metatab-property-4">
-                        <property-metafilter-cmp [metadata]="mainService.metadata[3]" [group]="propertyForm"></property-metafilter-cmp>
+                        <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[3]"></property-metafilter-cmp>
                     </div>
-                    <!--
 
                     <div class="card-content" id="metatab-property-3">
-                        <property-metafilter-cmp [metadata]="mainService.metadata[2]" #localActivities></property-metafilter-cmp>
+                        <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[2]" #localActivities></property-metafilter-cmp>
                     </div>
 
                     <div class="card-content" id="metatab-property-6">
-                        <property-metafilter-cmp [metadata]="mainService.metadata[5]" #features></property-metafilter-cmp>
+                        <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[5]" #features></property-metafilter-cmp>
                     </div>
 
                     <div class="card-content" id="metatab-property-2">
-                        <property-metafilter-cmp [metadata]="mainService.metadata[1]" #services></property-metafilter-cmp>
+                        <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[1]" #services></property-metafilter-cmp>
                     </div>
 
                     <div class="card-content" id="metatab-property-1">
-                        <property-metafilter-cmp [metadata]="mainService.metadata[0]" #trip></property-metafilter-cmp>
+                        <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[0]" #trip></property-metafilter-cmp>
                     </div>
-                    -->
                 </div>
                 <div class="text-center">
                     <div class="checkbox">
